@@ -4,6 +4,12 @@
     <artifactId>path_coverage_plus_plus</artifactId>
     <version>1</version>
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apiguardian/apiguardian-api -->
+        <dependency>
+            <groupId>org.apiguardian</groupId>
+            <artifactId>apiguardian-api</artifactId>
+            <version>1.1.2</version>
+        </dependency>
         <dependency>
             <groupId>com.github.javaparser</groupId>
             <artifactId>javaparser-symbol-solver-core</artifactId>
@@ -26,6 +32,23 @@
             <artifactId>junit-platform-launcher</artifactId>
             <version>1.10.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-commons</artifactId>
+            <version>1.10.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.opentest4j</groupId>
+            <artifactId>opentest4j</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-engine -->
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-engine</artifactId>
+            <version>1.10.2</version>
+        </dependency>
+
          <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-autoconfigure -->
          <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -49,6 +72,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>3.2.4</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.10.2</version>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -64,7 +93,7 @@
                     <argLine>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=localhost:8000 -Djdk.attach.allowAttachSelf=true -Xint</argLine>
                     <systemPropertyVariables>
                         <PATH_COVERAGE_SOURCE_HOME>${project.basedir}/src/main/java</PATH_COVERAGE_SOURCE_HOME>
-                        <SANDBOX_HOME>${project.basedir}/resources/sandbox</SANDBOX_HOME>
+                        <SANDBOX_HOME>${project.basedir}/resources/sandbox_debug</SANDBOX_HOME>
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
@@ -75,6 +104,9 @@
                     <systemPropertyVariables>
                         <SANDBOX_HOME>${project.basedir}/resources/sandbox</SANDBOX_HOME>
                     </systemPropertyVariables>
+                    <jvmArguments>
+                        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=localhost:8000 -Djdk.attach.allowAttachSelf=true -Xint
+                    </jvmArguments>
                 </configuration>
             </plugin>
         </plugins>
